--- a/.github/workflows/yocto-build-deploy.yml
+++ b/.github/workflows/yocto-build-deploy.yml
@@ -224,7 +224,7 @@ jobs:
         timeout-minutes: 90
         uses: product-os/review-commit-action@cddebf4cec8e40ea8f698b6dcce8cd70e38b7320 # v0.1.7
         with:
-          poll-interval: '10'
+          poll-interval: "10"
           allow-authors: false
 
       # this must be done before putting files in the workspace
@@ -470,7 +470,7 @@ jobs:
           sudo mkdir -p "${MOUNTPOINT}"
           sudo chown -R "$(id -u):$(id -g)" "${MOUNTPOINT}"
           sudo mount -t nfs "${YOCTO_CACHE_HOST}:/" "${MOUNTPOINT}" -o fsc,nolock
-  
+
       # https://wiki.yoctoproject.org/wiki/Enable_sstate_cache
       # https://docs.yoctoproject.org/4.0.10/ref-manual/variables.html#term-MIRRORS
       # https://docs.yoctoproject.org/4.0.10/ref-manual/variables.html#term-PREMIRRORS
@@ -498,6 +498,23 @@ jobs:
             https?$://.*/.* ${SOURCE_MIRROR_URL} \\
             ftp://.*/.*  ${SOURCE_MIRROR_URL} \\
           "
+
+          EOF
+          cat "${AUTO_CONF_FILE}"
+
+      # https://docs.yoctoproject.org/4.0.10/ref-manual/classes.html?highlight=source_mirror#own-mirrors-bbclass
+      # https://github.com/openembedded/openembedded/blob/master/classes/own-mirrors.bbclass
+      # The own-mirrors class makes it easier to set up your own PREMIRRORS from which to first fetch source before
+      # attempting to fetch it from the upstream specified in SRC_URI within each recipe.
+      - name: Add S3 shared-downloads to PREMIRRORS
+        env:
+          SOURCE_MIRROR_URL: https://${{ vars.AWS_S3_BUCKET || vars.S3_BUCKET }}.s3.${{ vars.AWS_REGION || 'us-east-1' }}.amazonaws.com/shared-downloads/
+        run: |
+          mkdir -p "$(dirname "${AUTO_CONF_FILE}")"
+          cat <<EOF >> "${AUTO_CONF_FILE}"
+
+          INHERIT += "own-mirrors"
+          SOURCE_MIRROR_URL = "${SOURCE_MIRROR_URL}"
 
           EOF
           cat "${AUTO_CONF_FILE}"
@@ -569,6 +586,44 @@ jobs:
         with:
           path: ${{ github.workspace }}/shared/${{ inputs.machine }}/sstate
           key: ${{ steps.cache-restore.outputs.cache-primary-key }}
+
+      # https://github.com/unfor19/install-aws-cli-action
+      - name: Setup awscli
+        uses: unfor19/install-aws-cli-action@e8b481e524a99f37fbd39fdc1dcb3341ab091367 # v1
+
+      # https://github.com/aws-actions/configure-aws-credentials
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e0343502 # v4.0.2
+        with:
+          role-to-assume: ${{ vars.AWS_IAM_ROLE }}
+          role-session-name: github-${{ github.job }}-${{ github.run_id }}-${{ github.run_attempt }}
+          aws-region: ${{ vars.AWS_REGION || 'us-east-1' }}
+          # https://github.com/orgs/community/discussions/26636#discussioncomment-3252664
+          mask-aws-account-id: false
+
+      # Sync shared downloads to S3 to use as a sources mirror in case original sources are not available.
+      # Exlude all directories and temp files as we only want the content and the .done files.
+      # https://awscli.amazonaws.com/v2/documentation/api/latest/reference/s3/sync.html
+      - name: Sync shared downloads to S3
+        # Do not publish shared downloads for pull_request_target events to prevent cache poisoning
+        # Do not publish shared downloads for private device-types as the mirror is public-read
+        if: github.event_name != 'pull_request_target' && steps.balena-lib.outputs.is_private == 'false'
+        # Ignore errors for now, as we may have upload conflicts with other jobs
+        continue-on-error: true
+        env:
+          SHARED_DOWNLOADS_DIR: ${{ github.workspace }}/shared/shared-downloads
+          S3_ACL: public-read
+          S3_SSE: AES256
+          # FIXME: This should be a public bucket that does not differ between production and staging deploys
+          S3_URL: "s3://${{ vars.AWS_S3_BUCKET || vars.S3_BUCKET }}/shared-downloads"
+          S3_REGION: ${{ vars.AWS_REGION || 'us-east-1' }}
+        # Create a symlink to the from the relative container path to the workspace in order to resolve symlinks
+        # created in the build container runtime.
+        run: |
+          sudo ln -sf "${{ github.workspace }}" /work
+          ls -al "${SHARED_DOWNLOADS_DIR}/"
+          aws s3 sync --sse="${S3_SSE}" --acl="${S3_ACL}" "${SHARED_DOWNLOADS_DIR}/" "${S3_URL}/" \
+            --exclude "*/*" --exclude "*.tmp" --size-only --follow-symlinks --no-progress
 
       # TODO: pre-install on self-hosted-runners
       # Needed by the yocto job to zip artifacts - Don't remove
@@ -688,22 +743,6 @@ jobs:
         id: s3-esr-images-dir
         if: steps.should-deploy.outputs.deploy && steps.esr-check.outputs.is-esr
         run: echo "string=esr-images" >>"${GITHUB_OUTPUT}"
-
-      # https://github.com/unfor19/install-aws-cli-action
-      - name: Setup awscli
-        if: steps.should-deploy.outputs.deploy
-        uses: unfor19/install-aws-cli-action@e8b481e524a99f37fbd39fdc1dcb3341ab091367 # v1
-
-      # # https://github.com/aws-actions/configure-aws-credentials
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e0343502 # v4.0.2
-        if: steps.should-deploy.outputs.deploy
-        with:
-          role-to-assume: ${{ vars.AWS_IAM_ROLE }}
-          role-session-name: github-${{ github.job }}-${{ github.run_id }}-${{ github.run_attempt }}
-          aws-region: ${{ vars.AWS_REGION || 'us-east-1' }}
-          # https://github.com/orgs/community/discussions/26636#discussioncomment-3252664
-          mask-aws-account-id: false
 
       # "If no keys are provided, but an IAM role is associated with the EC2 instance, it will be used transparently".
       # https://awscli.amazonaws.com/v2/documentation/api/latest/reference/s3/rm.html
